# OpenHands-Server

./: .gitignore  .pre-commit-config.yaml  Development.md  LICENSE  Makefile  README.md  alembic.ini  build.py  build.sh  pyproject.toml
.github/workflows/: build-test.yml  lint.yml  tests.yml
alembic/: env.py
alembic/versions/: 6ea6832c5acd_create_users_table.py
openhands_server/: __init__.py  app.py  main.py
openhands_server/conversation/: model.py
openhands_server/database/: __init__.py
openhands_server/local_conversation/: agent_info.py  agent_request.py  default_local_conversation_manager.py  local_conversation.py  manager.py  model.py  router.py  tool.py
openhands_server/manager/: conversation_manager.py
openhands_server/models/: __init__.py  agent_request.py  conversation.py  conversation_start_request.py  conversation_status.py  runtime.py  tool.py  user.py
openhands_server/routers/: __init__.py  conversation.py  conversations.py  runtimes.py  settings.py  users.py
openhands_server/runtime/: docker_runtime_manager.py  error.py  local_runtime_manager.py  page.py  router.py  runtime_info.py  runtime_manager.py  runtime_status.py
openhands_server/runtime_container/: database.py  docker_runtime_container_manager.py  docker_runtime_container_service.py  docker_runtime_manager.py  local_runtime_manager.py  manager.py  model.py  router.py  runtime_container_errors.py  runtime_container_manager.py  runtime_container_models.py  runtime_container_router.py  runtime_container_service.py  runtime_manager.py
openhands_server/runtime_image/: docker_runtime_image_manager.py  docker_runtime_image_service.py  manager.py  model.py  router.py  runtime_image_manager.py  runtime_image_models.py  runtime_image_router.py  runtime_image_service.py
openhands_server/sandbox/: docker_sandbox_service.py  sandbox_errors.py  sandbox_models.py  sandbox_router.py  sandbox_service.py
openhands_server/sandbox_spec/: README.md  docker_sandbox_spec_service.py  sandbox_spec_models.py  sandbox_spec_router.py  sandbox_spec_service.py
openhands_server/sandboxed_conversation/: conversation_manager.py  model.py  sandboxed_conversation_models.py  sandboxed_conversation_service.py
openhands_server/user/: user_dependencies.py  user_info.py
openhands_server/utils/: conversation_executor.py  date_utils.py  import_utils.py  pub_sub.py  success.py
tests/: __init__.py  test_docker_runtime_manager.py  test_dummy.py  test_user_model.py
